--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "gulp watch",
     "build": "gulp",
+    "vercel-build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
