--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "devDependencies": {
     "gulp": "^5.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^9.1.0",
     "gulp-sass": "^6.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "sass": "^1.89.2",
